<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.libra.login.xmlmodel.LoginXmlModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_titlebar_center_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/TextStyle.Black"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/mobile" />

                <com.libra.frame.widget.ClearEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_account"
                    android:inputType="phone"
                    android:text="@={vm.account}" />
            </LinearLayout>

            <View style="@style/DevideStyle" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/TextStyle.Black"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/smscode" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.libra.frame.widget.ClearEditText
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_code"
                        android:inputType="phone"
                        android:text="@={vm.code}" />

                    <Button
                        style="@style/TextStyle.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/select_btn"
                        android:enabled="@{vm.isSendBtnEnable()}"
                        android:onClick="@{vm.getCodeClick}"
                        android:text="@{vm.codeText}"
                        android:textSize="@dimen/textSizeMin" />
                </FrameLayout>
            </LinearLayout>

            <View style="@style/DevideStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/TextStyle.Black"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/newPassword" />

                <com.libra.frame.widget.ClearEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={vm.password}" />
            </LinearLayout>

            <View style="@style/DevideStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/TextStyle.Black"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/re_password" />

                <com.libra.frame.widget.ClearEditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={vm.confirmPassword}" />
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/TextStyle.Button.Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="@{vm.forgotClick}"
            android:text="@string/reset" />

    </LinearLayout>
</layout>